fixes broked layout main.container scrollbar hidden, 100vw

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,7 +70,7 @@ body {
 #root {
   height: 100%;
   overflow-x: hidden;
-  width: calc(100vw + 15px);
+  width: calc(100vw);
   min-width: var(--min-screen);
 }
 *:not(input, textarea) {
@@ -128,6 +128,10 @@ footer {
   /* max-width: 1500px; */
   padding: 0;
   justify-content: center;
+}
+main.container {
+  width: 100vw;
+  min-width: var(--screen-min-width);
 }
 main > col-fill {
   margin-left: 1rem;
@@ -650,7 +654,7 @@ table th {
   color: #111;
 }
 
-.swiper-slide {
+.home-screen .swiper-slide {
   text-align: center;
   font-size: 18px;
   display: -webkit-flex;
